--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,34 @@
                 <groupId>com.unboundid</groupId>
                 <artifactId>unboundid-ldapsdk</artifactId>
             </dependency>
+            <!--<dependency>-->
+                <!--<groupId>io.jsonwebtoken</groupId>-->
+                <!--<artifactId>jjwt</artifactId>-->
+                <!--<version>0.9.1</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.springframework.security</groupId>-->
+                <!--<artifactId>spring-security-jwt</artifactId>-->
+                <!--<version>1.0.9.RELEASE</version>-->
+            <!--</dependency>-->
+            <!--<dependency>-->
+                <!--<groupId>org.springframework</groupId>-->
+                <!--<artifactId>spring-core</artifactId>-->
+                <!--<version>5.1.1.RELEASE</version>-->
+            <!--</dependency>-->
+            <dependency>
+                <groupId>org.bitbucket.b_c</groupId>
+                <artifactId>jose4j</artifactId>
+                <version>0.6.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.googlecode.json-simple</groupId>
+                <artifactId>json-simple</artifactId>
+                <version>1.1.1</version>
+            </dependency>
+
+
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
@@ -55,7 +83,14 @@
                 <artifactId>spring-security-test</artifactId>
                 <scope>test</scope>
             </dependency>
-    </dependencies>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.11.1</version>
+                <scope>test</scope>
+            </dependency>
+
+        </dependencies>
 
     <build>
         <plugins>
