--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.ldap.embedded.ldif=classpath:server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
 
+
+jwt.key=EWGTENJ7FGBVFDWE45T6KM6VF196H6ZAJ7FGBVFDWE45T6KM6VF196H6ZA
+
