--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,20 +4,14 @@ spring.ldap.embedded.ldif=classpath:server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
 
-#logging.level.org.springframework.test=DEBUG
-## Root logger option
-#log4j.rootLogger=INFO, file, stdout
-#log4j.logger.org.springframework.ws.client.MessageTracing.sent=TRACE
-#log4j.logger.org.springframework.ws.client.MessageTracing.received=TRACE
-
-## Direct log messages to stdout
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.out
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#
-## log4j.appender.springlog.Threshold=INFO
-#log4j.appender.springlog.layout=org.apache.log4j.PatternLayout
-#log4j.appender.springlog.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-
 jwt.key=EWGTENJ7FGBVFDWE45T6KM6VF196H6ZAJ7FGBVFDWE45T6KM6VF196H6ZA
+
+# Override log level for specified package
+logging.level.org.springframework.web=DEBUG
+logging.level.com.isanuric.bar=DEBUG
+#logging.level.root=DEBUG
+
+
+
+
 
