--- a/pom.xml
+++ b/pom.xml
@@ -50,21 +50,6 @@
                 <artifactId>spring-boot-starter-webflux</artifactId>
                 <scope>test</scope>
             </dependency>
-            <!--<dependency>-->
-                <!--<groupId>io.jsonwebtoken</groupId>-->
-                <!--<artifactId>jjwt</artifactId>-->
-                <!--<version>0.9.1</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.security</groupId>-->
-                <!--<artifactId>spring-security-jwt</artifactId>-->
-                <!--<version>1.0.9.RELEASE</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.springframework</groupId>-->
-                <!--<artifactId>spring-core</artifactId>-->
-                <!--<version>5.1.1.RELEASE</version>-->
-            <!--</dependency>-->
             <dependency>
                 <groupId>org.bitbucket.b_c</groupId>
                 <artifactId>jose4j</artifactId>
@@ -75,27 +60,15 @@
                 <artifactId>json-simple</artifactId>
                 <version>1.1.1</version>
             </dependency>
-
-            <!--logging-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.logging.log4j</groupId>-->
-                <!--<artifactId>log4j-api</artifactId>-->
-                <!--<version>2.7</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.logging.log4j</groupId>-->
-                <!--<artifactId>log4j-core</artifactId>-->
-                <!--<version>2.7</version>-->
-            <!--</dependency>-->
-            <!--<dependency>-->
-                <!--<groupId>org.apache.logging.log4j</groupId>-->
-                <!--<artifactId>log4j-slf4j-impl</artifactId>-->
-                <!--<version>2.7</version>-->
-            <!--</dependency>-->
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>1.1.7</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
             </dependency>
 
             <!--test-->
