--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.ldap.embedded.ldif=classpath:server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 spring.ldap.embedded.port=8389
 
+## JWT
 jwt.key=EWGTENJ7FGBVFDWE45T6KM6VF196H6ZAJ7FGBVFDWE45T6KM6VF196H6ZA
+jwt.expiration.time=1_000_000
 
 # Override log level for specified package
 logging.level.org.springframework.web=DEBUG
