--- a/bar.yaml
+++ b/bar.yaml
@@ -1,3 +1,17 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: bar
+  labels:
+    run: app-bar
+spec:
+- port: 8080
+  targetPort: 80
+  protocol: TCP
+  name: http
+selector:
+  run: app-bar
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,3 +32,4 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 80
+
