--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.ldap.embedded.port=8389
 
 ## JWT
 jwt.key=EWGTENJ7FGBVFDWE45T6KM6VF196H6ZAJ7FGBVFDWE4
-jwt.expiration.time=1_000_000
+jwt.expiration.time.days=1
 
 # Override log level for specified package
 logging.level.org.springframework.web=DEBUG
