--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
                 <version>3.11.1</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.3.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
 
     <build>
